samples/_failures_safe/1761316531_c1f571_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37bcb88f.c: In function ‘display_errors’:
./samples/SAFE/__tmp_37bcb88f.c:141:9: error: expected expression at end of input
  141 |         if (strcmp(analyzer->entries[i].level, "ERROR") == 0)
      |         ^~
./samples/SAFE/__tmp_37bcb88f.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37bcb88f.c:141:9: error: expected declaration or statement at end of input
